--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@ var color = d3.scaleOrdinal(d3.schemeCategory20);
 var simulation = d3.forceSimulation()
     .force("link", d3.forceLink()
         .id(function(d) { return d.label; })
-        .distance(function(d) { return scale * d.length; })
-        .strength(function(d) { return d.weight; }))
+        .distance(function(d) { return scale / d.coupling; })
+        .strength(function(d) { return d.coupling * d.revisions; }))
     .force("charge", d3.forceManyBody()
         .strength(function() { return -scale; })
         .distanceMax(Math.min(width / 4, height / 4)))
@@ -59,7 +59,7 @@ d3.json("file.json", function(error, graph) {
     .selectAll("line")
     .data(graph.edges)
     .enter().append("line")
-      .attr("stroke-width", function(d) { return d.weight; });
+      .attr("stroke-width", function(d) { return radius * d.coupling; });
 
   var node = svg.append("g")
       .attr("class", "nodes")
